--- a/styles/style.css
+++ b/styles/style.css
@@ -80,7 +80,7 @@ img {
 	height: 28px;
 	color: #64099b;
 	font-size: 12px;
-	background-image: url("/image/bag-2.svg");
+	background-image: url("../image/bag-2.svg");
 	background-position: center;
 	background-repeat: no-repeat;
 	text-align: center;
@@ -94,7 +94,7 @@ img {
 .promo__container {
 	padding-top: 210px;
 	padding-bottom: 80px;
-	background-image: url("/image/bg-image.png");
+	background-image: url("../image/bg-image.png");
 	background-position: right 113px bottom 0 ;
 	background-repeat: no-repeat;	
 }
@@ -175,6 +175,8 @@ padding: 100px 0;
 grid-template-columns: repeat(2, max-content);
 justify-content: space-between;
 }
+
+/*
 .footer__logo-link {
 }
 .footer__logo {
@@ -211,3 +213,4 @@ justify-content: space-between;
 }
 .footer_social-item {
 }
+*/
